# api-gateway/docs/swagger.json
@@ -282,15 +282,6 @@
                 "summary": "Create a new Exchange",
                 "parameters": [
                     {
-                        "description": "Exchange details",
-                        "name": "exchange",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/genprotos.CreateExchangeRequest"
-                        }
-                    },
-                    {
                         "enum": [
                             "buy",
                             "sell"
@@ -300,6 +291,15 @@
                         "name": "status",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "description": "Exchange details",
+                        "name": "exchange",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/genprotos.CreateExchangeRequest"
+                        }
                     }
                 ],
                 "responses": {
